--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 /* font-family: 'Quicksand', sans-serif; */
 
 * {
-  background-image: #f2f2f2;
   scroll-behavior: smooth;
 }
 
@@ -54,7 +53,6 @@ a {
 .hero {
   display: flex;
   justify-content: center;
-  position: relative;
   overflow: hidden;
   padding-top: 200px;
   min-height: 100vh;
@@ -62,25 +60,25 @@ a {
   align-items: center;
   text-align: center;
   margin-bottom: 100px;
-  margin-top: 100px;
-  padding-top: 15px;
-  background: rgba(0, 0, 0, 0.3);
   text-decoration: underline;
   text-decoration-color: #bc6c25;
-  font-size: xx-large;
+  font-size: 3rem;
   font-family: "Montserrat", sans-serif;
+  position: relative;
+  margin-top: 90px;
+  background: rgba(0, 0, 0, 0.5);
 }
 
-/*
 .video-bg {
   position: absolute;
   z-index: -1;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   min-width: 100%;
   min-height: 100%;
 }
-*/
+
 .item img {
   border: 2px solid purple;
 }
@@ -128,7 +126,7 @@ img {
   position: relative;
   top: 75px;
   left: -100px;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 
 .accordian-item {
@@ -176,7 +174,7 @@ img {
 .answer::before {
   content: "";
   position: absolute;
-  width: .6rem;
+  width: 0.6rem;
   height: 90%;
 }
 
@@ -184,7 +182,7 @@ img {
   color: #fff;
   font-size: 1rem;
   padding: 2px;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 
 .accordian-item:target .answer {
@@ -245,7 +243,8 @@ section {
   display: grid;
   row-gap: 1rem;
 }
-.contact-form input, .contact-form textarea {
+.contact-form input,
+.contact-form textarea {
   width: 100%;
   border: none;
   outline: none;
@@ -282,13 +281,30 @@ section {
   height: 100%;
 }
 
+
+/* Footer css*/
+
 footer {
   border: 2px solid rebeccapurple;
   color: #dda15e;
   background-color: #283618;
+}
+
+.f-grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.f-grid-item {
+  border: 2px solid black;
   display: flex;
   justify-content: center;
 }
+
+.f-grid-item-2 {
+  border: 2px solid lightblue;
+}
+
 
 h4 {
   border: 3px solid #bc6c25;
@@ -308,13 +324,13 @@ h4 {
   padding-bottom: 5px;
 }
 
-@media (max-width: 964px){
+@media (max-width: 964px) {
   .contact-container {
     margin: 0 auto;
     width: 90%;
   }
 }
-@media (max-width: 700px){
+@media (max-width: 700px) {
   .contact-container {
     grid-template-columns: 1fr;
     padding-right: 10px;
