added google fonts to about and contact html files, and added more styling to each page

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* font-family: 'Quicksand', sans-serif; */
 
 * {
   scroll-behavior: smooth;
@@ -16,8 +15,11 @@ header {
   display: flex;
   justify-content: space-between;
   padding-left: 10px;
+  padding-right: 10px;
+  font-family: 'Montserrat', sans-serif;
 }
 
+/* logo text */
 h2 {
   border: 3px solid #bc6c25;
   padding: 4px;
@@ -25,21 +27,19 @@ h2 {
 
 .navbar {
   border: 2px solid rgb(236, 33, 236);
-  text-decoration: none;
   color: #dda15e;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 15%;
+  min-width: 15%;
   padding: 10px;
 }
 
 .menu {
   border: 2px solid yellow;
-  color: #dda15e;
-  text-decoration: none;
-  font-family: "Montserrat", sans-serif;
+  align-items: center;
 }
+
 
 a {
   color: #dda15e;
@@ -55,7 +55,7 @@ a {
   justify-content: center;
   overflow: hidden;
   padding-top: 200px;
-  min-height: 100vh;
+  min-height: 75vh;
   color: #dda15e;
   align-items: center;
   text-align: center;
@@ -65,7 +65,7 @@ a {
   font-size: 3rem;
   font-family: "Montserrat", sans-serif;
   position: relative;
-  margin-top: 90px;
+  margin-top: 100px;
   background: rgba(0, 0, 0, 0.5);
 }
 
@@ -79,6 +79,15 @@ a {
   min-height: 100%;
 }
 
+/* home page icon */
+/* .fa-solid .fa-angles-down{
+  border: 3px solid sienna;
+  display: flex;
+  position: absolute;
+  bottom: 12px;
+  font-size: 9rem;
+} */
+
 .item img {
   border: 2px solid purple;
 }
@@ -88,6 +97,7 @@ a {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 15px;
+  padding-bottom: 75px;
 }
 
 img {
@@ -106,7 +116,7 @@ img {
 }
 
 .about-page-container {
-  border: 4px solid #f00707;
+  border: 4px solid #ba07f0;
   display: flex;
   justify-content: center;
 }
@@ -299,10 +309,22 @@ footer {
   border: 2px solid black;
   display: flex;
   justify-content: center;
+  color: #606c38;
+  padding-top: 15px;
+  font-size: 7rem;
 }
 
+
+/* second footer column*/
 .f-grid-item-2 {
   border: 2px solid lightblue;
+  text-align: center;
+  padding-bottom: 5px;
+  font-family: "Montserrat", sans-serif;
+}
+h3 {
+  text-decoration: underline;
+  text-decoration-color: #bc6c25;
 }
 
 
@@ -338,5 +360,19 @@ h4 {
   }
   .map iframe {
     height: 400px;
+  }
+  .navbar {
+    display: flex;
+    align-items: center;
+  }
+  .hero {
+    min-height: 50%;
+  }
+  .video-bg {
+    min-height: 50%;
+  }
+  .about-me-paragraph {
+    min-height: 50%;
+    padding: 30px;
   }
 }
