--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
   scroll-behavior: smooth;
 }
@@ -14,9 +13,13 @@ header {
   border: 2px solid orange;
   display: flex;
   justify-content: space-between;
-  padding-left: 10px;
+  padding-left: 15px;
   padding-right: 10px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
+}
+
+li {
+  list-style: none;
 }
 
 /* logo text */
@@ -26,25 +29,25 @@ h2 {
 }
 
 .navbar {
-  border: 2px solid rgb(236, 33, 236);
   color: #dda15e;
   display: flex;
   align-items: center;
   justify-content: space-between;
   min-width: 15%;
+  min-height: 70px;
   padding: 10px;
 }
 
 .menu {
-  border: 2px solid yellow;
   align-items: center;
+  display: flex;
+  justify-content: space-between;
+  gap: 60px;
 }
-
 
 a {
   color: #dda15e;
   text-decoration: none;
-  border: 2px solid red;
   padding: 2px;
   display: flex;
   justify-content: center;
@@ -62,6 +65,8 @@ a {
   margin-bottom: 100px;
   text-decoration: underline;
   text-decoration-color: #bc6c25;
+  text-decoration-thickness: 0.2rem;
+  text-underline-offset: 26px;
   font-size: 3rem;
   font-family: "Montserrat", sans-serif;
   position: relative;
@@ -79,21 +84,15 @@ a {
   min-height: 100%;
 }
 
-/* home page icon */
-/* .fa-solid .fa-angles-down{
-  border: 3px solid sienna;
-  display: flex;
+/* home page arrow icon  */
+#hero-page-arrow-down {
   position: absolute;
-  bottom: 12px;
-  font-size: 9rem;
-} */
-
-.item img {
-  border: 2px solid purple;
+  top: 75%;
+  left: 45%;
+  font-size: 6rem;
 }
 
 .grid-item {
-  border: 2px solid rgb(12, 27, 194);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 15px;
@@ -101,7 +100,7 @@ a {
 }
 
 img {
-  max-width: 100%;
+  max-width: 80%;
   height: auto;
   border: 8px solid #dda15e;
 }
@@ -116,7 +115,6 @@ img {
 }
 
 .about-page-container {
-  border: 4px solid #ba07f0;
   display: flex;
   justify-content: center;
 }
@@ -140,7 +138,6 @@ img {
 }
 
 .accordian-item {
-  border: 3px solid blue;
   font-size: 10px;
   font-family: "Quicksand", sans-serif;
   box-sizing: border-box;
@@ -164,7 +161,6 @@ img {
 }
 
 .accordian-link i {
-  border: 4px solid yellow;
   color: #dda15e;
   width: 25px;
   height: 25px;
@@ -222,11 +218,9 @@ section {
   height: 100vh;
   flex-direction: column;
   justify-content: center;
-  border: 12px solid yellow;
 }
 
 .contact-container {
-  border: 12px solid rgb(153, 192, 96);
   background: #606c38;
   max-width: 960px;
   margin: auto;
@@ -283,19 +277,15 @@ section {
   background: #bc6c25;
 }
 
-.map {
-  border: 2px solid yellow;
-}
+
 .map iframe {
   width: 100%;
   height: 100%;
 }
 
-
 /* Footer css*/
 
 footer {
-  border: 2px solid rebeccapurple;
   color: #dda15e;
   background-color: #283618;
 }
@@ -306,7 +296,6 @@ footer {
 }
 
 .f-grid-item {
-  border: 2px solid black;
   display: flex;
   justify-content: center;
   color: #606c38;
@@ -314,10 +303,8 @@ footer {
   font-size: 7rem;
 }
 
-
 /* second footer column*/
 .f-grid-item-2 {
-  border: 2px solid lightblue;
   text-align: center;
   padding-bottom: 5px;
   font-family: "Montserrat", sans-serif;
@@ -326,7 +313,6 @@ h3 {
   text-decoration: underline;
   text-decoration-color: #bc6c25;
 }
-
 
 h4 {
   border: 3px solid #bc6c25;
@@ -346,12 +332,15 @@ h4 {
   padding-bottom: 5px;
 }
 
+/*media queries*/
+
 @media (max-width: 964px) {
   .contact-container {
     margin: 0 auto;
     width: 90%;
   }
 }
+
 @media (max-width: 700px) {
   .contact-container {
     grid-template-columns: 1fr;
@@ -366,7 +355,7 @@ h4 {
     align-items: center;
   }
   .hero {
-    min-height: 50%;
+    min-height: 40%;
   }
   .video-bg {
     min-height: 50%;
@@ -374,5 +363,347 @@ h4 {
   .about-me-paragraph {
     min-height: 50%;
     padding: 30px;
+  }
+  .menu {
+    font-size: small;
+  }
+
+  /*Contact Page @media*/
+  .contact-container {
+    max-height: 90%;
+    max-width: 40%;
+  }
+  .form-container {
+    max-height: 50%;
+  }
+  .contact-form {
+    max-height: 50%;
+  }
+  textarea {
+    max-height: 50%;
+    max-width: 50%;
+  }
+  input {
+    max-width: 50%;
+  }
+  .map {
+    display: none;
+  }
+}
+
+@media (max-width: 428px){
+  /*Home PAge @media*/
+  h1 {
+    font-size: 2rem;
+  }
+  #hero-page-arrow-down {
+    font-size: 2rem;
+    top: 85%;
+    left: 48%;
+  }
+  .menu {
+    padding: 10px;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+  /*About Page @media*/
+  .heading {
+    font-size: 2rem;
+  }
+
+  /*Contact Page @media*/
+
+  .contact-container {
+    max-width: 100%;
+  }
+
+   /*Footer @media*/
+   .f-grid-item {
+    font-size: 3rem;
+    padding-top: 55px;
+  }
+}
+
+@media (max-width: 412px){
+  h1 {
+    font-size: 3rem;
+  }
+  #hero-page-arrow-down {
+    font-size: 2rem;
+    left: 50%;
+  }
+  .menu {
+    padding: 10px;
+  }
+  /*About Page @media*/
+  .heading {
+    font-size: 2rem;
+  }
+
+  /*Contact Page @media*/
+
+  .contact-container {
+    max-width: 100%;
+  }
+
+   /*Footer @media*/
+   .f-grid-item {
+    font-size: 3rem;
+    padding-top: 55px;
+  }
+}
+
+@media (max-width: 390px) {
+
+  /* Home Page @media*/
+  h1 {
+    font-size: 2rem;
+  }
+  #hero-page-arrow-down {
+    font-size: 2rem;
+    margin-left: 0.6rem;
+    margin-top: 2rem;
+    bottom: 50%;
+    left: 46%;
+  }
+  .hero {
+    min-height: 40%;
+  }
+  .menu {
+    font-size: small;
+    padding: 5px;
+  }
+  img {
+    max-width: 78%;
+  }
+
+  /*About Page @media*/
+  h2 {
+    font-size: small;
+    margin-top: 13%;
+    margin-bottom: 12%;
+  }
+  .heading {
+    font-size: 1.5rem;
+  }
+  .kristen-image {
+    min-height: auto;
+    min-width: 50%;
+  }
+  .about-page-container {
+    align-items: center;
+  }
+  .about-me-paragraph {
+    position: inherit;
+  }
+  .accordian-item {
+    min-height: 20%;
+    min-width: auto;
+  }
+  .accordian-link {
+    font-size: small;
+  }
+
+  /* Contact Page @media */
+  .contact-form {
+    max-width: 100%;
+  }
+  .contact-container {
+    max-width: 100%;
+    max-height: fit-content;
+  }
+  .map {
+    display: none;
+  }
+   /*Footer @media*/
+   .f-grid-item {
+    font-size: 3rem;
+    padding-top: 55px;
+  }
+}
+
+@media (max-width: 379px) {
+  h1 {
+    font-size: large;
+  }
+  #hero-page-arrow-down {
+    font-size: 15px;
+    margin-left: 0.6rem;
+    margin-top: 2rem;
+  }
+  .hero {
+    min-height: 40%;
+  }
+  .menu {
+    font-size: small;
+    padding: 10px;
+  }
+  h2 {
+    font-size: small;
+    margin-top: 13%;
+    margin-bottom: 12%;
+  }
+  /*Contact Page @media*/
+  .map {
+    display: none;
+  }
+}
+
+@media (max-width: 376px) {
+  /*Home Page @media*/
+  h1 {
+    font-size: large;
+  }
+  #hero-page-arrow-down {
+    font-size: 15px;
+    margin-left: 0.6rem;
+    margin-top: 2rem;
+  }
+  .hero {
+    min-height: 40%;
+  }
+  .menu {
+    font-size: small;
+  }
+  h2 {
+    font-size: small;
+    margin-top: 13%;
+    margin-bottom: 12%;
+  }
+  /*About Page @media*/
+  .kristen-image {
+    min-height: auto;
+    min-width: 50%;
+  }
+  .about-page-container {
+    align-items: center;
+  }
+  .about-me-paragraph {
+    position: inherit;
+  }
+  .accordian-link {
+    font-size: small;
+  }
+  /* Contact Page @media*/
+  .map {
+    display: none;
+  }
+}
+
+@media (max-width: 364px) {
+  /*Home Page @media*/
+  .hero {
+    min-height: 25%;
+  }
+  h2 {
+    font-size: small;
+    margin-bottom: 15%;
+    margin-top: 13%;
+    border: 2px solid #bc6c25;
+  }
+  .menu {
+    font-size: small;
+  }
+  h1 {
+    font-size: 70%;
+    padding-bottom: 5rem;
+    margin-bottom: 25%;
+  }
+  #hero-page-arrow-down {
+    font-size: medium;
+    margin-top: 3rem;
+  }
+  /* about page @media*/
+  .heading {
+    font-size: larger;
+    padding-top: 25%;
+  }
+  .kristen-image {
+    min-height: auto;
+    min-width: 55%;
+  }
+  .about-page-container {
+    align-items: center;
+  }
+  .about-me-paragraph {
+    position: inherit;
+  }
+  .accordian-link {
+    font-size: small;
+  }
+  /* Contact Page @media*/
+  .contact {
+    max-height: 100%;
+  }
+  .form-container {
+    max-height: 80%;
+  }
+  .contact-form {
+    max-height: 75%;
+    align-items: center;
+  }
+  .contact-container{
+    max-height: 100%;
+  }
+  textarea {
+    max-height: 50%;
+    max-width: 75%;
+  }
+  .map {
+    display: none;
+  }
+   /*Footer @media*/
+   .f-grid-item {
+    font-size: 3rem;
+    padding-top: 55px;
+  }
+}
+
+@media (max-width: 320px){
+
+  /*Home Page @media*/
+
+  img {
+    max-width: 60%;
+    border: 4px solid #dda15e;
+  }
+
+  /*About Page @media*/
+
+  .about-page-container{
+    max-width: 90%;
+  }
+  .about-me-paragraph {
+    max-height: 40%;
+  }
+ 
+  /*Contact Page @media*/
+  .contact {
+    max-height: 100%;
+    max-width: 80%;
+    border: 4px solid red;
+  }
+  .form-container {
+    max-height: 30%;
+    border: 3px solid pink;
+  }
+  textarea {
+    max-height: 20%;
+  }
+  .contact-container{
+    max-height: 100%;
+    max-width: 100%;
+    border: 2px solid purple;
+  }
+  #contact-page-send-button {
+    border: 2px solid blue;
+  }
+
+  /*Footer @media*/
+  .f-grid-item {
+    font-size: 3rem;
+    padding-top: 55px;
   }
 }
