--- a/style.css
+++ b/style.css
@@ -195,71 +195,53 @@ img {
   max-height: 20rem;
 }
 
-section {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.container {
+/* .container {
   width: 100%;
   max-width: 80rem;
   margin: 0 auto;
   padding: 0 1.5rem;
-}
+} */
 
-/*Contact Page*/
-.contact {
-  display: flex;
+/*----------------------------Contact Page*/
+
+h3 {
   color: #dda15e;
-  width: 100%;
-  height: 100vh;
-  flex-direction: column;
-  justify-content: center;
 }
-
 .contact-container {
   background: #606c38;
   max-width: 960px;
   margin: auto;
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 0.5rem;
-  overflow: hidden;
+  height: 90%;
+  padding-right: 20px;
 }
 
 .form-container {
-  padding: 20px;
+  padding: 10px;
   box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 50%;
 }
 
-.form-container h3 {
-  font-size: 1.2rem;
-  font-weight: 600;
-  margin-bottom: 1rem;
-}
-
-.contact-form {
-  display: grid;
-  row-gap: 1rem;
-}
 .contact-form input,
 .contact-form textarea {
-  width: 100%;
+  width: 90%;
   border: none;
   outline: none;
   padding: 10px;
+  margin: 10px;
   font-size: 0.9rem;
   border-radius: 0.4rem;
-  padding: 10px;
 }
 .contact-form textarea {
   resize: none;
-  height: 200px;
+  height: 100px;
 }
 
 .contact-form .send-button {
@@ -278,12 +260,21 @@ section {
 }
 
 
-.map iframe {
-  width: 100%;
-  height: 100%;
+ .map {
+   background-color: grey;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+  width: 50%;
+  height: 90%;
 }
 
-/* Footer css*/
+iframe {
+  width: 90%;
+  height: 90%;
+}
+
+/* -----------------------------Footer css*/
 
 footer {
   color: #dda15e;
@@ -325,16 +316,16 @@ footer {
 
 /* @ MEDIA QUERIES */
 
-@media (max-width: 834px){
-  .menu {
-    padding: 5px;
-  }
-}
-
 @media (max-width: 964px) {
   .contact-container {
     margin: 0 auto;
     width: 90%;
+  }
+}
+
+@media (max-width: 834px){
+  .menu {
+    padding: 5px;
   }
 }
 
@@ -388,8 +379,8 @@ footer {
   }
 }
 
-@media (max-width: 428px){
-  /*Home PAge @media*/
+@media (max-width: 429px){
+  /*Home Page @media*/
   h1 {
     font-size: 2rem;
   }
@@ -411,9 +402,25 @@ footer {
   }
 
   /*Contact Page @media*/
-
+  
   .contact-container {
     max-width: 100%;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+  }
+  .form-container {
+    display: flexbox;
+    justify-content: center;
+  }
+
+  .contact-form {
+    display: contents;
+    justify-content: center;
+  }
+  iframe {
+    display: none;
+    border: 2px solid blue;
   }
 
    /*Footer @media*/
@@ -443,6 +450,9 @@ footer {
 
   .contact-container {
     max-width: 100%;
+  }
+  .map {
+    display: none;
   }
 
    /*Footer @media*/
@@ -631,9 +641,7 @@ footer {
     font-size: small;
   }
   /* Contact Page @media*/
-  .contact {
-    max-height: 100%;
-  }
+ 
   .form-container {
     max-height: 80%;
   }
@@ -658,42 +666,3 @@ footer {
   }
 }
 
-@media (max-width: 320px){
-
-  /*Home Page @media*/
-
-  img {
-    max-width: 60%;
-    border: 4px solid #dda15e;
-  }
-
-  /*About Page @media*/
-
-  .about-page-container{
-    max-width: 90%;
-  }
-  .about-me-paragraph {
-    max-height: 40%;
-  }
- 
-  /*Contact Page @media*/
-  .contact {
-    max-height: 100%;
-    max-width: 80%;
-  }
-  .form-container {
-    max-height: 30%;
-  }
-  textarea {
-    max-height: 20%;
-  }
-  .contact-container{
-    max-height: 100%;
-    max-width: 100%;
-  }
-  /*Footer @media*/
-  .f-grid-item {
-    font-size: 3rem;
-    padding-top: 55px;
-  }
-}
