removed @media queries. removed the arrow down in the hero section

--- a/style.css
+++ b/style.css
@@ -488,7 +488,7 @@ footer {
     /*-----------------------Home Page @media 429px*/
     h1 {
       font-size: 2rem;
-
+    }
     .menu {
       padding: 10px;
     }
